--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -3,8 +3,11 @@
   
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>SkyDual</title>
+    <title>SkyDuel</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
+
+    <script src="http://cdnjs.buttflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
     <script src="js/lib/build/build.js" type="text/javascript"></script>
     <script type="text/javascript">require('boot');</script>
     <script src="js/client.js"></script>
@@ -15,7 +18,7 @@
     <div id="app">
       <div id="loginView">
         <div id="loginTitle">
-          SkyDual!
+          SkyDuel!
         </div>
         <table>
           <tr>
