--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -1,69 +1,26 @@
 <!DOCTYPE html>
 <html>
-  
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>SkyDuel</title>
+
     <link rel="stylesheet" href="style.css" type="text/css" />
 
     <script src="http://cdnjs.buttflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
+
+    <script src="http://cdnjs.buttflare.com/ajax/libs/react/0.11.2/react.min.js"></script>
+    <script src="http://cdnjs.buttflare.com/ajax/libs/react/0.11.2/JSXTransformer.js"></script>
+    
     <script src="js/lib/build/build.js" type="text/javascript"></script>
     <script type="text/javascript">require('boot');</script>
-    <script src="js/client.js"></script>
-    <script src="js/pop.js" type="text/javascript"></script>
+    <script src="js/chat.js"></script>
   </head>
   
   <body>
-    <div id="app">
-      <div id="loginView">
-        <div id="loginTitle">
-          SkyDuel!
-        </div>
-        <table>
-          <tr>
-            <td>
-              <input id="loginUser" type="text" placeholder="Username" />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input name="channels" type="text" id="channelList" placeholder="Channel"
-              />
-            </td>
-            <tr>
-              <td>
-                <input id="login" type='button' value="Start!" />
-              </td>
-            </tr>
-          </table>
-          <div id="loginError">
-          </div>
-        </div>
-        <div id="chatHistory"></div>
-        <div id="toolbar">
-          <ul id="status">
-            <li>
-              users:
-              <select name="users" id="usersList">
-                <option value="*">
-                  all
-                </option>
-              </select>
-            </li>
-            <li>
-              name:
-              <span id="name">
-              </span>
-            </li>
-            <li>
-              room:
-              <span id="room">
-              </span>
-            </li>
-          </ul>
-          <input tabindex="1" type="text" id="entry" />
-        </div>
-      </div>
-    </body>
-  </html>
+    <div id="rjMain"></div>
+
+    <script src="js/lib/reactjs/login.jsx" type="text/jsx"></script>
+    <script src="js/lib/reactjs/main.jsx" type="text/jsx"></script>
+  </body>
+</html>
