Getting the client/server updates working.

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -18,9 +18,11 @@
   </head>
   
   <body>
-    <div id="rjMain"></div>
+    <div id="rjMain">Hello world this is Skyduel... Loading...</div>
 
-    <script src="js/lib/reactjs/login.jsx" type="text/jsx"></script>
-    <script src="js/lib/reactjs/main.jsx" type="text/jsx"></script>
+    <script src="js/reactjs/skydual.jsx" type="text/jsx"></script>
+    <script src="js/reactjs/login.jsx" type="text/jsx"></script>
+    <script src="js/reactjs/chat.jsx" type="text/jsx"></script>
+    <script src="js/reactjs/main.jsx" type="text/jsx"></script>
   </body>
 </html>
