--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -4,22 +4,22 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>SkyDuel</title>
 
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
-    <script src="http://cdnjs.buttflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
-
-    <script src="http://cdnjs.buttflare.com/ajax/libs/react/0.11.2/react.min.js"></script>
-    <script src="http://cdnjs.buttflare.com/ajax/libs/react/0.11.2/JSXTransformer.js"></script>
-    
+    <script src="js/lib/all.js" type="text/javascript"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/lib/phaser.min.js" type="text/javascript"></script>
     <script src="js/lib/build/build.js" type="text/javascript"></script>
     <script type="text/javascript">require('boot');</script>
     <script src="js/chat.js"></script>
   </head>
   
   <body>
-    <div id="rjMain">Hello world this is Skyduel... Loading...</div>
+    <div id="rjMain">Skyduel Loading...</div>
 
+    <script src="js/Player.js" type="text/javascript"></script>
+    <script src="js/skyDuelController.js" type="text/javascript"></script>
     <script src="js/reactjs/skydual.jsx" type="text/jsx"></script>
     <script src="js/reactjs/login.jsx" type="text/jsx"></script>
     <script src="js/reactjs/chat.jsx" type="text/jsx"></script>
