--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -18,6 +18,7 @@
   <body>
     <div id="rjMain">Skyduel Loading...</div>
 
+    <script src="js/lib/HashArray.js" type="text/javascript"></script>
     <script src="js/Player.js" type="text/javascript"></script>
     <script src="js/skyDuelController.js" type="text/javascript"></script>
     <script src="js/reactjs/skydual.jsx" type="text/jsx"></script>
