--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -7,6 +7,9 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/login.css">
+
     <script src="js/lib/all.js" type="text/javascript"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="js/lib/phaser.min.js" type="text/javascript"></script>
@@ -18,9 +21,16 @@
   <body>
     <div id="rjMain">Skyduel Loading...</div>
 
+    <!-- Shared -->
     <script src="js/lib/HashArray.js" type="text/javascript"></script>
     <script src="js/Player.js" type="text/javascript"></script>
-    <script src="js/skyDuelController.js" type="text/javascript"></script>
+    <script src="js/UserActions.js" type="text/javascript"></script>
+    <script src="js/UserState.js" type="text/javascript"></script>
+    <!-- Client -->
+    <script src="js/LatencyAnalyzer.js" type="text/javascript"></script>
+    <script src="js/ServerClientStateManager.js" type="text/javascript"></script>
+    <script src="js/SkyDuelClient.js" type="text/javascript"></script>
+    <!-- JSX -->
     <script src="js/reactjs/skydual.jsx" type="text/jsx"></script>
     <script src="js/reactjs/login.jsx" type="text/jsx"></script>
     <script src="js/reactjs/chat.jsx" type="text/jsx"></script>
