First pass at integrating a characteristic system and bullets.

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -23,9 +23,15 @@
 
     <!-- Shared -->
     <script src="js/lib/HashArray.js" type="text/javascript"></script>
+    <script src="js/characteristics/CharacteristicManager.js" type="text/javascript"></script>
+    <script src="js/characteristics/Characteristic_Physics.js" type="text/javascript"></script>
+    <script src="js/characteristics/Characteristic_ScreenWrapping.js" type="text/javascript"></script>
+    <script src="js/characteristics/Characteristic_ShootsBullets.js" type="text/javascript"></script>
+    <script src="js/Bullet.js" type="text/javascript"></script>
     <script src="js/Player.js" type="text/javascript"></script>
     <script src="js/UserActions.js" type="text/javascript"></script>
     <script src="js/UserState.js" type="text/javascript"></script>
+    <script src="js/UserInputProcessor.js" type="text/javascript"></script>
     <!-- Client -->
     <script src="js/LatencyAnalyzer.js" type="text/javascript"></script>
     <script src="js/ServerClientStateManager.js" type="text/javascript"></script>
