--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -26,6 +26,7 @@
     <script src="js/characteristics/CharacteristicManager.js" type="text/javascript"></script>
     <script src="js/characteristics/Characteristic_Physics.js" type="text/javascript"></script>
     <script src="js/characteristics/Characteristic_ScreenWrapping.js" type="text/javascript"></script>
+    <script src="js/characteristics/Characteristic_DestroyOffScreen.js" type="text/javascript"></script>
     <script src="js/characteristics/Characteristic_ShootsBullets.js" type="text/javascript"></script>
     <script src="js/Bullet.js" type="text/javascript"></script>
     <script src="js/Player.js" type="text/javascript"></script>
