--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -22,6 +22,7 @@
     <div id="rjMain">Skyduel Loading...</div>
 
     <!-- Shared -->
+    <script src="js/logViewer.js" type="text/javascript"></script>
     <script src="js/lib/HashArray.js" type="text/javascript"></script>
     <script src="js/characteristics/CharacteristicManager.js" type="text/javascript"></script>
     <script src="js/characteristics/Characteristic_Physics.js" type="text/javascript"></script>
