--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -31,6 +31,7 @@
     <script src="js/characteristics/Characteristic_ShootsBullets.js" type="text/javascript"></script>
     <script src="js/Bullet.js" type="text/javascript"></script>
     <script src="js/Player.js" type="text/javascript"></script>
+    <script src="js/Bird.js" type="text/javascript"></script>
     <script src="js/UserActions.js" type="text/javascript"></script>
     <script src="js/UserState.js" type="text/javascript"></script>
     <script src="js/UserInputProcessor.js" type="text/javascript"></script>
