--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -35,6 +35,7 @@
     <script src="js/UserActions.js" type="text/javascript"></script>
     <script src="js/UserState.js" type="text/javascript"></script>
     <script src="js/UserInputProcessor.js" type="text/javascript"></script>
+    <script src="js/sprites/Plane.js" type="text/javascript"></script>
     <!-- Client -->
     <script src="js/LatencyAnalyzer.js" type="text/javascript"></script>
     <script src="js/ServerClientStateManager.js" type="text/javascript"></script>
