First pass at browserifying everything and refactoring the entirety of the world to be more maintainable and to follow more clearly defined conventions.

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -21,25 +21,8 @@
   <body>
     <div id="rjMain">Skyduel Loading...</div>
 
-    <!-- Shared -->
-    <script src="js/logViewer.js" type="text/javascript"></script>
-    <script src="js/lib/HashArray.js" type="text/javascript"></script>
-    <script src="js/characteristics/CharacteristicManager.js" type="text/javascript"></script>
-    <script src="js/characteristics/Characteristic_Physics.js" type="text/javascript"></script>
-    <script src="js/characteristics/Characteristic_ScreenWrapping.js" type="text/javascript"></script>
-    <script src="js/characteristics/Characteristic_DestroyOffScreen.js" type="text/javascript"></script>
-    <script src="js/characteristics/Characteristic_ShootsBullets.js" type="text/javascript"></script>
-    <script src="js/Bullet.js" type="text/javascript"></script>
-    <script src="js/Player.js" type="text/javascript"></script>
-    <script src="js/Bird.js" type="text/javascript"></script>
-    <script src="js/UserActions.js" type="text/javascript"></script>
-    <script src="js/UserState.js" type="text/javascript"></script>
-    <script src="js/UserInputProcessor.js" type="text/javascript"></script>
-    <script src="js/sprites/Plane.js" type="text/javascript"></script>
-    <!-- Client -->
-    <script src="js/LatencyAnalyzer.js" type="text/javascript"></script>
-    <script src="js/ServerClientStateManager.js" type="text/javascript"></script>
-    <script src="js/SkyDuelClient.js" type="text/javascript"></script>
+    <!-- Browserify (cannot use for JSX files yet) -->
+    <script src="js/browserify.bundle.js"></script>
     <!-- JSX -->
     <script src="js/reactjs/skydual.jsx" type="text/jsx"></script>
     <script src="js/reactjs/login.jsx" type="text/jsx"></script>
