--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -19,7 +19,7 @@
   </head>
   
   <body>
-    <a href="https://github.com/joshjung/skyduel" target="_blank"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/c6625ac1f3ee0a12250227cf83ce904423abf351/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png"></a>
+    <a href="https://github.com/joshjung/skyduel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
 
     <div id="rjMain">Skyduel Loading...</div>
 
@@ -27,6 +27,7 @@
     <script src="js/browserify.bundle.js"></script>
     
     <!-- JSX -->
+    <script src="js/reactjs/players.jsx" type="text/jsx"></script>
     <script src="js/reactjs/messenger.jsx" type="text/jsx"></script>
     <script src="js/reactjs/skyduel.jsx" type="text/jsx"></script>
     <script src="js/reactjs/login.jsx" type="text/jsx"></script>
