Adding git integration to show latest updates on homepage.

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -10,6 +10,7 @@
     <!--0 Latest compiled and minified CSS -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
+    <link rel="stylesheet" href="css/git.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/messenger.css">
@@ -32,6 +33,7 @@
     <script src="js/browserify.bundle.js"></script>
     
     <!-- JSX -->
+    <script src="js/reactjs/git.jsx" type="text/jsx"></script>
     <script src="js/reactjs/players.jsx" type="text/jsx"></script>
     <script src="js/reactjs/messenger.jsx" type="text/jsx"></script>
     <script src="js/reactjs/skyduel.jsx" type="text/jsx"></script>
