--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>SkyDuel - 2D WW2 Shooter</title>
     <description>Unleash your WW2 spirit and fight in this arcade-style top-down airplane shooter.</description>
+
+    <!-- META -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="Unleash your WW2 spirit and fight in this arcade-style top-down airplane shooter." />
+
+    <!-- OPEN GRAPH -->
+    <meta property="og:title" content="SkyDuel - 2D WW2 Shooter">
+    <meta property="og:site_name" content="SkyDuel">
+    <meta property="og:locale" content="en_US">
+    <link rel="canonical" href="http://www.skyduel.com">
+    <meta property="og:url" content="http://www.skyduel.com">
+    <meta property="og:description" content="Unleash your WW2 spirit and fight in this arcade-style top-down airplane shooter.">
+
+    <meta property="og:image" content="http://www.skyduel.com/images/skyDuelLogoIndependent.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="456">
+    <meta property="og:image:height" content="117">
+
+    <!-- LINKS -->
     <link rel='image_src' href='/images/skyduelLogoIndependent.jpg' />
 
-    <!--0 Latest compiled and minified CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="css/git.css">
@@ -15,6 +32,7 @@
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/messenger.css">
 
+    <!-- JAVASCRIPT LIBRARIES -->
     <script src="js/lib/all.js" type="text/javascript"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="js/lib/phaser.min.js" type="text/javascript"></script>
