Updating image_src in index.html

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image:height" content="700">
 
     <!-- LINKS -->
-    <link rel='image_src' href='/images/skyduelLogoOpengraph.jpg' />
+    <link rel='image_src' href='http://www.skyduel.com/images/skyduelLogoOpengraph.jpg' />
 
     <!-- CSS -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
