Initial 'staging' server checkin.

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -30,6 +30,9 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/messenger.css">
+		
+		<!-- GATE PORT INFO -->
+		<script src="gate.js" type="text/javascript"></script>
 
     <!-- JAVASCRIPT LIBRARIES -->
     <script src="js/lib/all.js" type="text/javascript"></script>
